<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controller.activity.ServiceDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingTollbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/ColapsedToolBarStyle"
            app:expandedTitleTextAppearance="@style/ExpandedToolBarStyle"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginStart="15dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:maxLines="3"
            app:toolbarId="@+id/toolbarService">

            <ImageView
                android:id="@+id/imgServiceOwned"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_service_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="bottom"
                android:background="@drawable/background_collapsing_menu_service" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarService"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:descendantFocusability="blocksDescendants"
            tools:context=".controller.activity.ServiceDetailsActivity">

            <TextView
                android:id="@+id/lblServPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/inconsolata"
                android:textColor="@color/textColorBlack"
                android:textSize="36sp"
                android:textStyle="bold"
                android:transitionName="lblServPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblServiceStarRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBarService"
                app:layout_constraintStart_toStartOf="@+id/lblServPrice"
                app:layout_constraintTop_toTopOf="@+id/ratingBarService" />


            <RatingBar
                android:id="@+id/ratingBarService"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:indeterminateTint="@color/rating_bar_background"
                android:isIndicator="true"
                android:progressBackgroundTint="@color/rating_bar_background"
                android:progressTint="@color/rating_bar_star"
                android:secondaryProgressTint="@color/rating_bar_background"
                android:stepSize="0.1"
                app:layout_constraintStart_toEndOf="@+id/lblServiceStarRating"
                app:layout_constraintTop_toBottomOf="@+id/lblServPrice" />

            <TextView
                android:id="@+id/lblDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autoSizeMaxTextSize="20dp"
                android:fontFamily="@font/comfortaa_light"
                android:textColor="@color/textColorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lblServPrice"
                app:layout_constraintTop_toBottomOf="@+id/ratingBarService" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblDescription"
                tools:visibility="gone">

                <View
                    android:id="@+id/viewDivider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/textColorSecondary" />

                <TextView
                    android:id="@+id/lblShowAverageTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/comfortaa_light"
                    android:text="Tempo médio de sessão"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/inconsolata"
                    android:foregroundTint="#000000"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/viewDivider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/textColorSecondary" />

                <TextView
                    android:id="@+id/lblShowClothes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/comfortaa_light"
                    android:text="Roupas Recomendadas"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblClothing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inconsolata"
                    android:foregroundTint="#000000"
                    android:textColor="@color/textColorBlack"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/viewDivider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="@color/textColorSecondary" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAddCart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_btn_white"
                android:text="@string/btn_add_to_cart"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddCart" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoView"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/lblSetStarRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefin_sans_thin"
                    android:text="@string/lbl_rate_us_service"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/ratingAdd"
                    android:layout_width="236dp"
                    android:layout_height="62dp"
                    android:clickable="false"
                    android:indeterminateTint="@color/rating_bar_background"
                    android:progressBackgroundTint="@color/rating_bar_background"
                    android:progressTint="@color/rating_bar_star"
                    android:secondaryProgressTint="@color/rating_bar_background"
                    android:stepSize="1" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerComments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lblComments"
                app:layout_constraintTop_toBottomOf="@+id/lblComments" />

            <TextView
                android:id="@+id/lblComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/hammersmith_one"
                android:text="@string/lbl_comments"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>